[package]
name = "void_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
verbose = []

[dependencies]
# Math & physique fondamentale
nalgebra = "0.34.1"
rand = "0.9.2"
noise = "0.9.0"
petgraph = "0.8.3"

 # Bevy stack (avec rendu complet et pipeline 2D/3D)
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_camera",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "x11"
] }
wgpu = "26.0.1"

# Async & multi-threading
rayon = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }

# Sérialisation & persistance
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"

# Monitoring & logs
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
metrics = "0.24.2"